[tool.poetry]
name = "server"
version = "0.1.0"
description = "Asyncio Server"
authors = ["Aminul Chowdhury <aminul.babor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.12.0"
protobuf = "3.20.3"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
